--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@ function loadUsers(){
 
 
 function loadNow(data){
-        for ( let us of data){
+        for ( let usr of data){
 
             list.innerHTML += `
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <img src="${us.picture.large}" class="card-img-top" alt="...">
+                    <img src="${usr.picture.large}" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-text">${us.name.first} ${us.name.last}</h5>
-                      <p class="card-text">Phone: <small>${us.cell}</small></p>
-                      <p class="card-text">Email: <small>${us.email}</small></p>
+                        <h5 class="card-text">${usr.name.first} ${usr.name.last}</h5>
+                        <p class="card-text">Phone: <small>${usr.cell}</small></p>
+                        <p class="card-text">Email: <small>${usr.email}</small></p>
                     </div>
-                  </div>
+                </div>
             </div>
             `
     }
